<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagina_de_libreta"
    tools:context=".Ahorcado.Inicio_Ahorcado" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_categoria"
        android:layout_alignParentStart="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/string_dificultad"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner_dificultad"
        android:layout_width="286dp"
        android:layout_height="35dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView_Puntos_j2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="62dp"
        android:gravity="center"
        android:text="@string/string_nombre_ahorcado"
        android:textSize="@android:dimen/notification_large_icon_height" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="285dp"
        android:layout_height="38dp"
        android:layout_below="@+id/textView_PuntajeAhorcado"
        android:layout_alignParentStart="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView_PuntajeAhorcado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Puntos_j2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="49dp"
        android:gravity="center"
        android:text="@string/string_categoria"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_memorama"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_dificultad"
        android:layout_alignParentStart="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="empezarJuego"
        android:text="@string/string_jugar"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_memorama"
        android:layout_marginStart="95dp"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/secondary_text"
        android:text="@string/regresar"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:onClick="regresarAlMenu"
        android:textSize="20sp" />
</RelativeLayout>

